fixed the HTML files

--- a/Shifter/app/templates/base.html
+++ b/Shifter/app/templates/base.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         {% if title %}
-        <titile>{{titile}}</titile>
+        <title>{{title}}</title>
         {% else %}
         <title>Shifter</title>
         {% endif %}
         
     </head>
-    {% block content}
+    {% block content %}
     {% endblock %}
 </html>
