--- a/Shifter/app/templates/index.html
+++ b/Shifter/app/templates/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-{% extends "base.html"}
+{% extends "base.html" %}
 
 {% block content %}
     <body>
-        
     </body>
 {% endblock %}
