Worked on the login.css. It needs a fix

--- a/Shifter/app/templates/index.html
+++ b/Shifter/app/templates/index.html
@@ -2,6 +2,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <link href = "../static/login.css" rel = "stylesheet" type = "text/css">
     <body>
+        <form action = "" method = "post" class = "login">
+                {{formLogin.Username(value = "Username", class_="username")}}<br>
+                {{formLogin.Password(value = "Password", class_="password")}}
+        </form>
     </body>
 {% endblock %}
