--- a/Shifter/app/templates/index.html
+++ b/Shifter/app/templates/index.html
@@ -8,7 +8,9 @@
         <form action = "" method = "post" class = "login">
                 {{formLogin.Username(value = "Username", class_="username")}}<br>
                 {{formLogin.Password(value = "Password", class_="password")}}<br>
-                {{formLogin.Login(class_ = "Login")}}<br>
+                {{formLogin.Login(class_ = "Login")}}
+                {{formLogin.ResetPassword(class_="Resetbutton", value = "Reset Password")}}<br>
+
                 {{formLogin.RememberMe.label(class_ = "RememberMe")}}
                 {{formLogin.RememberMe(class_ = "RememberMeButton")}}
         </form>
