--- a/Shifter/app/static/base.css
+++ b/Shifter/app/static/base.css
@@ -5,6 +5,9 @@ header{
     border-radius: 0 5px 5px 0;
     margin-bottom:1px;
     color:black;
+    font-style: italic;
+    
+
 }
 nav h1{
     font-family:'Times New Roman', Times, serif;
@@ -23,21 +26,25 @@ nav ul li{
     background:rgb(61, 3, 3);
     border-radius: 12px;
     border-color: white;
-    padding:7px 20px;
+    padding:.7% 1.4%;
+    font-style: normal;
+    font-weight: 800;
 }
 .logout{
     padding:0;
     margin-left:30px;
-    margin-right:1%;
 }
 .Logoutbutton{
     font-family:'Times New Roman', Times, serif;
-    padding:2px 20px;
     text-align:center;
     font-size:25px;
-    background-color: white;
-    color:black;
-    border-color:gold;;
+    background-color: black;
+    color:rgb(207, 206, 206);
+    border-color:white;
+    padding: 15%;
+    border-radius: 10px;
+    font-weight: bold;
+
 
 }
 nav a{
