--- a/Shifter/app/static/login.css
+++ b/Shifter/app/static/login.css
@@ -29,20 +29,33 @@ form.login input.username, input.password{
     margin-right:8%;
     
 }
-form.login input.Login{
+.Resetbutton{
+    background-color:rgb(61, 3, 3);
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size:1.7vw;
+    padding:20px;
+    border-radius: 15px;
+    width :54%;
+    margin-left :23%;
+    margin-right:23%;
+    margin-top:-5%;
+    color:gold;
+    margin-bottom:5%;
+}
+.Login{
     background-color:rgb(61, 3, 3);
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:2vw;
     padding:20px;
     border-radius: 15px;
-    width :64%;
-    margin-left :18%;
-    margin-right:18%;
+    width :54%;
+    margin-left :23%;
+    margin-right:23%;
     margin-top:-5%;
     color:gold;
-    margin-bottom:5%;
-
+    margin-bottom:6%;
 
 }
 .RememberMe{
