--- a/Shifter/app/templates/index.html
+++ b/Shifter/app/templates/index.html
@@ -6,6 +6,7 @@
     
     <body>
         <form action = "" method = "post" class = "login">
+                
                 {{formLogin.Username(value = "Username", class_="username")}}<br>
                 {{formLogin.Password(value = "Password", class_="password")}}<br>
                 {{formLogin.Login(class_ = "Login")}}
@@ -15,4 +16,6 @@
                 {{formLogin.RememberMe(class_ = "RememberMeButton")}}
         </form>
     </body>
+    <script src="https://kit.fontawesome.com/85e18b4a6c.js" crossorigin="anonymous"></script>
+
 {% endblock %}
