--- a/Shifter/app/templates/addemployee.html
+++ b/Shifter/app/templates/addemployee.html
@@ -7,35 +7,35 @@
         <div class="container">
             <form action = "" method = "POST">
                 <p>
-                    {{ formEmployee.first_name.label }}<br>
-                    {{ formEmployee.first_name(size=32) }}<br>
+                    {{ formEmployee.first_name.label}}:
+                    {{ formEmployee.first_name(class_="firstnamebox") }}<br>
                     {% for error in formEmployee.first_name.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
-                    {{ formEmployee.last_name.label }}<br>
-                    {{ formEmployee.last_name(size=32) }}<br>
+                    {{ formEmployee.last_name.label }}:
+                    {{ formEmployee.last_name(class_="lastnamebox") }}<br>
                     {% for error in formEmployee.last_name.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
-                    {{ formEmployee.email.label }}<br>
-                    {{ formEmployee.email(size=32) }}<br>
+                    {{ formEmployee.email.label }}:
+                    {{ formEmployee.email(class_="emailbox") }}<br>
                     {% for error in formEmployee.email.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
-                    {{ formEmployee.phone_number.label }}<br>
-                    {{ formEmployee.phone_number(size=32) }}<br>
+                    {{ formEmployee.phone_number.label }}:
+                    {{ formEmployee.phone_number() }}<br>
                     {% for error in formEmployee.phone_number.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
-                <p>{{ formEmployee.submit() }}</p>
-                <p>Users will login with their email. A user's default password will be their phone number.</p>
+                <p>{{ formEmployee.submit(class_ = "submitinfo")}}</p>
+                <p class = "note">Users will login with their email. A user's default password will be their phone number.</p>
             </form>
         </div>
     </body>
