--- a/Shifter/app/static/addemployee.css
+++ b/Shifter/app/static/addemployee.css
@@ -4,25 +4,50 @@ body {
     background-size:100%;
     background-repeat: no-repeat;
     margin:0;
+    background-color:rgba(194, 194, 194, 0.274);
 }
 
 .container {
     width:97.3%;
-    height:100%;
+    height:0%;
     
-    padding:25px;
+    padding:5% 0 2% 5%;
     border-radius:20px;
-    text-align: center;
-    background: rgba(131, 112, 112, 0.144);
+    text-align: left;
+}
+label{
+    font-size:1.8vw;
+    margin-left: 0;
+    transition:all 0.5s ease;
 }
 
 input[type=text] {
-    padding: 10px, 20px, 10px;
+    transition:all 0.5s ease;
     border: 2px solid gray;
-    width: 40%;
-    margin-left: 5px;
+    border-radius: 10px;
+    width:30%;
+    padding:10px 0 10px 0 ;
+    align-content: center;    
+}
+.firstnamebox, .lastnamebox{
+    margin-left:3%;
+    margin-right:0;
+}
+.emailbox{
+    margin-left:6.2%;
+    margin-right:0;
 }
 
 input[type=text]:focus {
     background-color: #ebe6c0;
+}
+input[type = submit]{
+    font-family:'Times New Roman', Times, serif;
+    padding:10px;
+    font-size:2vw;
+    margin-right:0;
+}
+.note{
+    font-size:1.5vw;
+    font-style: italic;
 }
