--- a/Shifter/app/static/login.css
+++ b/Shifter/app/static/login.css
@@ -1,6 +1,6 @@
 
 body {
-    transition:background 0.5s ease;
+    transition: 0.5s ease;
     background-image: url('login1.jpg');
     background-size:100%;
     background-color:rgba(83, 83, 83, 0.116);
