--- a/Shifter/app/templates/index.html
+++ b/Shifter/app/templates/index.html
@@ -7,8 +7,8 @@
     <body>
         <form action = "" method = "post" class = "login">
                 
-                {{formLogin.Username(value = "Username", class_="username")}}<br>
-                {{formLogin.Password(value = "Password", class_="password")}}<br>
+                {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
+                {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
                 {{formLogin.Login(class_ = "Login")}}
                 {{formLogin.ResetPassword(class_="Resetbutton", value = "Reset Password")}}<br>
 
