--- a/Shifter/app/templates/choose.html
+++ b/Shifter/app/templates/choose.html
@@ -5,8 +5,9 @@
     <link href = "../static/choose.css" rel = "stylesheet" type = "text/css">
     <body>
         <form action = "" method = "POST">
-        {{formEditView.View(class_="View") }}<br>
-        {{formEditView.AddEmpl(class_ = "AddEmpl")}}
+        {{formEditView.View(class_="Buttons") }}<br>
+        {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
+        {{formEditView.EditEmpl(class_="Buttons")}}
     </form>
     </body>
 
