--- a/Shifter/app/templates/addemployee.html
+++ b/Shifter/app/templates/addemployee.html
@@ -35,7 +35,7 @@
                     {% endfor %}
                 </p>
                 <p>{{ formEmployee.submit(class_ = "submitinfo")}}</p>
-                <p class = "note">Users will login with their email. A user's default password will be their phone number.</p>
+                <p class = "note">*Users will login with their email. A user's default password will be their <em>Phone Number</em>.</p>
             </form>
         </div>
     </body>
