--- a/Shifter/app/templates/choose.html
+++ b/Shifter/app/templates/choose.html
@@ -4,11 +4,16 @@
 {% block content %}
     <link href = "../static/choose.css" rel = "stylesheet" type = "text/css">
     <body>
-        <form action = "" method = "POST">
-        {{formEditView.View(class_="Buttons") }}<br>
-        {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
-        {{formEditView.EditEmpl(class_="Buttons")}}
-    </form>
+        <div class = "forms">
+            <form>
+                {{formEditView.View(class_="Buttons") }}<br></form>
+            <form>
+                {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
+            </form>
+            <form>
+                {{formEditView.EditEmpl(class_="Buttons")}}
+            </form>
+        </div>
     </body>
 
 
