--- a/Shifter/app/static/login.css
+++ b/Shifter/app/static/login.css
@@ -13,9 +13,10 @@ div{
     transition: all 0.5s ease-in;
     background:rgb(131, 112, 112);
     border-radius: 20px;
-    margin-top:8%;
-    margin-left:9%;
+    margin-top:9%;
+    margin-left:10%;
     margin-right:56%;
+    
     padding:80px 40px;
 }
 
@@ -44,7 +45,7 @@ input.username, input.password{
     margin-right:23%;
     margin-top:0;
     color:gold;
-    margin-bottom:0;
+    margin-bottom:-2%;
 }
 .Login{
     background-color:rgb(61, 3, 3);
