still working on the database

--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -6,7 +6,7 @@
     
     <body>
         <div class = forms>
-        <form class = "login" method = 'Post' action = "">
+        <form class = "login" method = 'post' novalidate>
                 
                 {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
                 {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
