--- a/Shifterapp/app/templates/register.html
+++ b/Shifterapp/app/templates/register.html
@@ -1,4 +1,72 @@
-<!DOCTYPE html>
-<html>
-    <p>hello</p>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <link href = "../static/register.css" rel = "stylesheet" type = "text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <body>
+        <div class="container">
+            <form action = "" method = "POST">
+                <h1>Register</h1>
+                <p>
+                <li class="d-flex justify-content-center">
+
+                    {{ formRegister.name_company.label}}:
+                    {{ formRegister.name_company(class_="companyname", placeholder= "Company") }}<br>
+                    {% for error in formRegister.name_company.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+            </li>
+                </p>
+                <p>
+                <li class="d-flex justify-content-center">
+
+                    {{ formRegister.manager_namef.label }}:
+                    {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "First name") }}<br>
+                    {% for error in formRegister.manager_namef.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+            </li>
+                </p>
+                  <p>
+                    {{ formRegister.manager_namel.label }}:
+                    {{ formRegister.manager_namel(class_="managerlastname", placeholder= "Last Name") }}<br>
+                    {% for error in formRegister.manager_namel.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ formRegister.email.label }}:
+                    {{ formRegister.email(class_="emailbox", placeholder= "ex: email_here@exampla.com") }}<br>
+                    {% for error in formRegister.email.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                  <p>
+                    {{ formRegister.enter_password.label }}:
+                    {{ formRegister.enter_password(class_="password", placeholder= "Password") }}<br>
+                    {% for error in formRegister.enter_password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                  <p>
+                    {{ formRegister.re_password.label }}:
+                    {{ formRegister.re_password(class_="confirmpassword", placeholder= "Confirm password") }}<br>
+                    {% for error in formRegister.re_password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ formRegister.phone_number.label }}:
+                    {{ formRegister.phone_number(class_="phone", placeholder= "ex. +1-555-5555") }}<br>
+                    {% for error in formRegister.phone_number.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>{{ formRegister.submit(class_ = "submitinfo")}}</p>
+                <p class = "note">*Users will login with their email. A user's default password will be their <em>Phone Number</em>.</p>
+            </form>
+        </div>
+    </body>
+{% endblock %}
