--- a/Shifterapp/app/templates/register.html
+++ b/Shifterapp/app/templates/register.html
@@ -1,33 +1,29 @@
+<!DOCTYPE html>
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/register.css" rel = "stylesheet" type = "text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href = "../static/registration.css" rel = "stylesheet" type = "text/css">
+
     <body>
         <div class="container">
             <form action = "" method = "POST">
                 <h1>Register</h1>
                 <p>
-                <li class="d-flex justify-content-center">
-
                     {{ formRegister.name_company.label}}:
                     {{ formRegister.name_company(class_="companyname", placeholder= "Company") }}<br>
                     {% for error in formRegister.name_company.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
-            </li>
+
                 </p>
                 <p>
-                <li class="d-flex justify-content-center">
 
                     {{ formRegister.manager_namef.label }}:
                     {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "First name") }}<br>
                     {% for error in formRegister.manager_namef.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
-            </li>
+
                 </p>
                   <p>
                     {{ formRegister.manager_namel.label }}:
@@ -65,7 +61,6 @@
                     {% endfor %}
                 </p>
                 <p>{{ formRegister.submit(class_ = "submitinfo")}}</p>
-                <p class = "note">*Users will login with their email. A user's default password will be their <em>Phone Number</em>.</p>
             </form>
         </div>
     </body>
