--- a/Shifterapp/app/templates/choose.html
+++ b/Shifterapp/app/templates/choose.html
@@ -6,7 +6,8 @@
     <body>
         <div class = "forms">
             <form>
-                {{formEditView.View(class_="Buttons") }}<br></form>
+                {{formEditView.View(class_="Buttons") }}<br>
+            </form>
             <form>
                 {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
             </form>
