--- a/Shifterapp/app/templates/register.html
+++ b/Shifterapp/app/templates/register.html
@@ -83,9 +83,9 @@
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
-            <li class="d-flex justify-content-end">
-                <p>{{ formRegister.submit(class_ = "submitinfo")}}</p>
-            </li>
+            
+                <p>{{ formRegister.submitB(class_ = "submitinfoB")}}</p>
+            
             </form>
         </div>
     </body>
