--- a/Shifterapp/app/static/choose.css
+++ b/Shifterapp/app/static/choose.css
@@ -16,9 +16,8 @@ div.forms{
 }
 .Buttons{
     background-color:rgb(61, 3, 3);
-
     text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1.3vw;
     padding:30px;
     border-radius:15px;
