--- a/Shifterapp/app/static/registration.css
+++ b/Shifterapp/app/static/registration.css
@@ -39,12 +39,11 @@ input[type=text] {
     margin-left:6.2%;
     margin-right:0;
 }
-
 input[type=text]:focus {
     background-color: #ebe6c0;
     text-align: center;
 }
-.submitinfo{
+/*.submitinfo{
     background-color:rgb(61, 3, 3);
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -59,16 +58,21 @@ input[type=text]:focus {
     margin-bottom:-2%;
     cursor: pointer;
     text-decoration-line: underline;
+}*/
+
+.submitinfoB{
+    font-family:'Times New Roman', Times, serif;
+    padding:10px;
+    font-size:2vw;
+    margin-right:0;
+    cursor:pointer;
 }
-.submitinfo:hover{
+.submitinfoB:hover{
     background-color: rgb(158, 157, 157);
     color: gold;
-    font-size: 1.5vw;
+    font-size: 20px;
     transition :  .9s;
-    padding: 20px;
-    border-radius: 15px;
+    padding: .7% 1.4%;
+    border-radius: 12px;
 }
-.note{
-    font-size:1.5vw;
-    font-weight: bolder;
-}
+
